feat: add markdown parsing support in ArticleComponent with sanitized output

--- a/src/app/pages/article/article.component.html
+++ b/src/app/pages/article/article.component.html
@@ -73,11 +73,9 @@
       <app-user-profile [pubkey]="authorPubkey()" mode="expanded"></app-user-profile>
     </section>
 
-    <mat-divider></mat-divider>
-
-    <!-- Content Section -->
+    <mat-divider></mat-divider>    <!-- Content Section -->
     <main class="article-content">
-      <app-content [content]="content()"></app-content>
+      <div class="markdown-content" [innerHTML]="parsedContent()"></div>
     </main>
 
     <!-- Footer Actions -->
