Add media player with custom frame interaction

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,8 @@
 <div class="app-container" [class.dark-theme]="themeService.darkMode()">
 
+  <app-media-player></app-media-player>
+  <app-video-player></app-video-player>
+
   <!-- Loading overlay -->
   @if (appState.isLoading()) {
   <app-loading-overlay [message]="appState.loadingMessage()"></app-loading-overlay>
