--- a/src/app/components/video-player/video-player.component.html
+++ b/src/app/components/video-player/video-player.component.html
@@ -1,16 +1,72 @@
-@if(media.current?.type === 'YouTube') {
-<div class="media-info">
-    @if(media.youtubeUrl) {
-    <iframe sandbox="allow-scripts allow-same-origin allow-presentation" id="ytplayer" class="youtube-video"
-        type="text/html" [src]="media.youtubeUrl" frameborder="0" allowfullscreen allow="autoplay"></iframe>
-    }
-</div>
-}
+@if(media.current?.type === 'YouTube' || media.current?.type === 'Video') {
+<div #videoWindow 
+     class="video-window" 
+     [ngClass]="windowClasses"
+     (mousedown)="onMouseDown($event)">
+  
+  <!-- Window title bar -->
+  <div class="window-titlebar">    <div class="window-title">
+      <span>{{ media.current?.title || 'Video Player' }}</span>
+    </div>
+    
+    <div class="window-controls">
+      <button mat-icon-button 
+              class="control-button minimize"
+              (click)="onMinimize()"
+              title="Minimize">
+        <mat-icon>minimize</mat-icon>
+      </button>
+      
+      <button mat-icon-button 
+              class="control-button maximize"
+              (click)="onMaximize()"
+              title="Maximize">
+        <mat-icon>{{ media.videoWindowState().isMaximized ? 'fullscreen_exit' : 'fullscreen' }}</mat-icon>
+      </button>
+      
+      <button mat-icon-button 
+              class="control-button close"
+              (click)="onClose()"
+              title="Close">
+        <mat-icon>close</mat-icon>
+      </button>
+    </div>
+  </div>
 
-@if(media.current?.type === 'Video') {
-<div class="media-info">
-    <video class="event-video" controls autoplay="true" preload="none">
-        <source [src]="media.videoUrl" type="video/mp4" />
-    </video>
+  <!-- Video content -->
+  @if(!media.videoWindowState().isMinimized) {
+  <div class="video-content">
+    @if(media.current?.type === 'YouTube') {
+    <div class="media-info">
+        @if(media.youtubeUrl) {
+        <iframe sandbox="allow-scripts allow-same-origin allow-presentation" 
+                id="ytplayer" 
+                class="youtube-video"
+                type="text/html" 
+                [src]="media.youtubeUrl" 
+                frameborder="0" 
+                allowfullscreen 
+                allow="autoplay"></iframe>
+        }
+    </div>
+    }
+
+    @if(media.current?.type === 'Video') {
+    <div class="media-info">
+        <video class="event-video" controls autoplay="true" preload="none">
+            <source [src]="media.videoUrl" type="video/mp4" />
+        </video>
+    </div>
+    }
+  </div>
+  }
+
+  <!-- Resize handle -->
+  @if(!media.videoWindowState().isMaximized && !media.videoWindowState().isMinimized) {
+  <div class="resize-handle" 
+       (mousedown)="onResizeMouseDown($event)">
+    <mat-icon>drag_handle</mat-icon>
+  </div>
+  }
 </div>
 }
