feat: Add footer input to media player component and adjust layout for toolbar height

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -353,6 +353,7 @@
       <!-- Page content -->
       <div class="content-wrapper">
         <router-outlet></router-outlet>
+        <app-media-player [footer]="true"></app-media-player>
       </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
